--- a/.github/workflows/build-mariadb.yml
+++ b/.github/workflows/build-mariadb.yml
@@ -1,4 +1,4 @@
-name: Froxlor-CI-MariaDB-test
+name: Froxlor-CI-MariaDB
 on: [ 'push', 'pull_request', 'create' ]
 
 jobs:
@@ -65,9 +65,9 @@ jobs:
           tools: composer:v2
 
       - name: Install Node.js
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v3
         with:
-          node-version: '20.x'
+          node-version: 'lts'
       - name: Install npm dependencies
         run: npm install
 
@@ -102,12 +102,12 @@ jobs:
       - name: Set nightly branding
         run: |
           echo "sha_short=$(git rev-parse --short "$GITHUB_SHA")" >> "$GITHUB_ENV"
-          sed -i "s/const BRANDING = '';/const BRANDING = '+nightly.${{ env.sha_short }}';/" lib/Froxlor/Froxlor.php
-          zip -r froxlor-nightly.${{ env.sha_short }}.zip . -x "*.git*"
-          sha256sum froxlor-nightly.${{ env.sha_short }}.zip > froxlor-nightly.${{ env.sha_short }}.zip.sha256
+          sed -i "s/const BRANDING = '';/const BRANDING = '+nightly.${{ github.env.sha_short }}';/" lib/Froxlor/Froxlor.php
+          zip -r froxlor-nightly.${{ github.env.sha_short }}.zip . -x "*.git*"
+          sha256sum froxlor-nightly.${{ github.env.sha_short }}.zip > froxlor-nightly.${{ github.env.sha_short }}.zip.sha256
           mkdir dist
-          mv froxlor-nightly.${{ env.sha_short }}.zip dist/
-          mv froxlor-nightly.${{ env.sha_short }}.zip.sha256 dist/
+          mv froxlor-nightly.${{ github.env.sha_short }}.zip dist/
+          mv froxlor-nightly.${{ github.env.sha_short }}.zip.sha256 dist/
 
       - name: Archive production artifacts
         uses: actions/upload-artifact@v3
