--- a/.github/workflows/build-mariadb.yml
+++ b/.github/workflows/build-mariadb.yml
@@ -53,12 +53,12 @@ jobs:
 
       - name: Set nightly branding
         run: |
-          sed -i "s/const BRANDING = '';/const BRANDING = '+nightly.${{GITHUB_SHA::7}}';/" lib/Froxlor/Froxlor.php
-          zip -r froxlor-nightly.${{GITHUB_SHA::7}}.zip . -x "*.git*"
-          sha256sum froxlor-nightly.${{GITHUB_SHA::7}}.zip > froxlor-nightly.${{GITHUB_SHA::7}}.zip.sha256
+          sed -i "s/const BRANDING = '';/const BRANDING = '+nightly.${{github.event.after}}';/" lib/Froxlor/Froxlor.php
+          zip -r froxlor-nightly.${{github.event.after}}.zip . -x "*.git*"
+          sha256sum froxlor-nightly.${{github.event.after}}.zip > froxlor-nightly.${{github.event.after}}.zip.sha256
           mkdir dist
-          mv froxlor-nightly.${{GITHUB_SHA::7}}.zip dist/
-          mv froxlor-nightly.${{GITHUB_SHA::7}}.zip.sha256 dist/
+          mv froxlor-nightly.${{github.event.after}}.zip dist/
+          mv froxlor-nightly.${{github.event.after}}.zip.sha256 dist/
 
       - name: Archive production artifacts
         uses: actions/upload-artifact@v3
