--- a/.github/workflows/build-mariadb.yml
+++ b/.github/workflows/build-mariadb.yml
@@ -99,18 +99,18 @@ jobs:
           touch templates/Froxlor/build/index.html
           touch templates/Froxlor/build/assets/index.html
 
-      - name: Set outputs
-        id: vars
-        run: echo "sha_short=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
+      #- name: Set outputs
+      #  id: vars
 
       - name: Set nightly branding
         run: |
-          sed -i "s/const BRANDING = '';/const BRANDING = '+nightly.${{ steps.vars.outputs.sha_short }}';/" lib/Froxlor/Froxlor.php
-          zip -r froxlor-nightly.${{ steps.vars.outputs.sha_short }}.zip . -x "*.git*"
-          sha256sum froxlor-nightly.${{ steps.vars.outputs.sha_short }}.zip > froxlor-nightly.${{ steps.vars.outputs.sha_short }}.zip.sha256
+          echo "sha_short=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
+          sed -i "s/const BRANDING = '';/const BRANDING = '+nightly.${{steps.vars.outputs.sha_short}}';/" lib/Froxlor/Froxlor.php
+          zip -r froxlor-nightly.${{steps.vars.outputs.sha_short}}.zip . -x "*.git*"
+          sha256sum froxlor-nightly.${{steps.vars.outputs.sha_short}}.zip > froxlor-nightly.${{steps.vars.outputs.sha_short}}.zip.sha256
           mkdir dist
-          mv froxlor-nightly.${{ steps.vars.outputs.sha_short }}.zip dist/
-          mv froxlor-nightly.${{ steps.vars.outputs.sha_short }}.zip.sha256 dist/
+          mv froxlor-nightly.${{steps.vars.outputs.sha_short}}.zip dist/
+          mv froxlor-nightly.${{steps.vars.outputs.sha_short}}.zip.sha256 dist/
 
       - name: Archive production artifacts
         uses: actions/upload-artifact@v3
