--- a/.github/workflows/build-mariadb.yml
+++ b/.github/workflows/build-mariadb.yml
@@ -99,10 +99,10 @@ jobs:
           touch templates/Froxlor/build/index.html
           touch templates/Froxlor/build/assets/index.html
 
-      #- name: Set outputs
-      #  id: vars
+      #- name: Set vars
 
       - name: Set nightly branding
+        id: vars
         run: |
           echo "sha_short=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
           sed -i "s/const BRANDING = '';/const BRANDING = '+nightly.${{steps.vars.outputs.sha_short}}';/" lib/Froxlor/Froxlor.php
