--- a/.github/workflows/build-mariadb.yml
+++ b/.github/workflows/build-mariadb.yml
@@ -100,6 +100,7 @@ jobs:
           touch templates/Froxlor/build/assets/index.html
 
       - name: Set outputs
+        id: vars
         run: echo "sha_short=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
 
       - name: Set nightly branding
