build and deploy nightly
Signed-off-by: Michael Kaufmann <d00p@froxlor.org>

--- a/.github/workflows/build-mariadb.yml
+++ b/.github/workflows/build-mariadb.yml
@@ -8,8 +8,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        php-versions: [ '7.4', '8.2' ]
-        mariadb-version: [ 10.11, 10.5 ]
+        php-versions: [ '8.2' ]
+        mariadb-version: [ 10.11 ]
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -53,6 +53,7 @@ jobs:
     name: Create nightly/testing tarball
     runs-on: ubuntu-latest
     needs: froxlor
+    if: ${{ github.event_name == 'push' }}
 
     steps:
       - name: Checkout
@@ -99,15 +100,18 @@ jobs:
           touch templates/Froxlor/build/index.html
           touch templates/Froxlor/build/assets/index.html
 
+      - name: Set outputs
+        id: vars
+        run: echo "sha_short=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
+
       - name: Set nightly branding
         run: |
-          echo "sha_short=$(git rev-parse --short "$GITHUB_SHA")" >> $GITHUB_ENV
-          sed -i "s/const BRANDING = '';/const BRANDING = '+nightly.${{env.sha_short}}';/" lib/Froxlor/Froxlor.php
-          zip -r froxlor-nightly.${{env.sha_short}}.zip . -x "*.git*"
-          sha256sum froxlor-nightly.${{env.sha_short}}.zip > froxlor-nightly.${{env.sha_short}}.zip.sha256
+          sed -i "s/const BRANDING = '';/const BRANDING = '+nightly.${{steps.vars.outputs.sha_short}}';/" lib/Froxlor/Froxlor.php
+          zip -r froxlor-nightly.${{steps.vars.outputs.sha_short}}.zip . -x "*.git*"
+          sha256sum froxlor-nightly.${{steps.vars.outputs.sha_short}}.zip > froxlor-nightly.${{steps.vars.outputs.sha_short}}.zip.sha256
           mkdir dist
-          mv froxlor-nightly.${{env.sha_short}}.zip dist/
-          mv froxlor-nightly.${{env.sha_short}}.zip.sha256 dist/
+          mv froxlor-nightly.${{steps.vars.outputs.sha_short}}.zip dist/
+          mv froxlor-nightly.${{steps.vars.outputs.sha_short}}.zip.sha256 dist/
 
       - name: Archive production artifacts
         uses: actions/upload-artifact@v3
@@ -117,12 +121,12 @@ jobs:
             dist
 
 
-#      - name: Deploy nightly to server
-#        uses: easingthemes/ssh-deploy@v3.4.3
-#        env:
-#          ARGS: "-rltDzvO --chown=${{ secrets.WEB_USER }}:${{ secrets.WEB_USER }}"
-#          SOURCE: "dist/"
-#          SSH_PRIVATE_KEY: ${{ secrets.SERVER_SSH_KEY }}
-#          REMOTE_HOST: ${{ secrets.REMOTE_HOST }}
-#          REMOTE_USER: ${{ secrets.REMOTE_USER }}
-#          TARGET: "${{ secrets.REMOTE_TARGET }}/nightly/"
+      - name: Deploy nightly to server
+        uses: easingthemes/ssh-deploy@v3.4.3
+        env:
+          ARGS: "-rltDzvO --chown=${{ secrets.WEB_USER }}:${{ secrets.WEB_USER }}"
+          SOURCE: "dist/"
+          SSH_PRIVATE_KEY: ${{ secrets.SERVER_SSH_KEY }}
+          REMOTE_HOST: ${{ secrets.REMOTE_HOST }}
+          REMOTE_USER: ${{ secrets.REMOTE_USER }}
+          TARGET: "${{ secrets.REMOTE_TARGET }}/nightly/"
