--- a/.github/workflows/build-mariadb.yml
+++ b/.github/workflows/build-mariadb.yml
@@ -113,7 +113,7 @@ jobs:
           mv froxlor-nightly.${{steps.vars.outputs.sha_short}}.zip dist/
           mv froxlor-nightly.${{steps.vars.outputs.sha_short}}.zip.sha256 dist/
 
-      - name: Deploy nightly to server
+      - name: Deploy nightly to remote server
         uses: easingthemes/ssh-deploy@v3.4.3
         env:
           ARGS: "-rltDzvO --chown=${{ secrets.WEB_USER }}:${{ secrets.WEB_USER }}"
